--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>2.4.1</version>
                 <configuration>
-                    <skip>false</skip>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
             <plugin>
@@ -52,7 +52,7 @@
                             <goal>unpack-dependencies</goal>
                         </goals>
                         <configuration>
-                            <skip>false</skip>
+                            <skip>true</skip>
                             <excludeScope>system</excludeScope>
                             <excludeGroupIds>junit,org.mockito,org.hamcrest</excludeGroupIds>
                             <outputDirectory>${project.build.directory}/classes</outputDirectory>
@@ -88,7 +88,7 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <skip>false</skip>
+                            <skip>true</skip>
                             <executable>${java.home}/../bin/javafxpackager</executable>
                             <arguments>
                                 <argument>-createjar</argument>
@@ -155,6 +155,9 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                         <configuration>
+                             <skip>true</skip>
+                         </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -167,8 +170,10 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.1</version>
                 <configuration>
+                    
+                            <skip>true</skip>
                     <excludes>
-                      
+                        <exclude></exclude>
                     </excludes>
                 </configuration>
                 <reportSets>
