--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <addClasspath>true</addClasspath>
+                            <addClasspath>false</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
                             <mainClass>View.View</mainClass>
                         </manifest>
