--- a/pom.xml
+++ b/pom.xml
@@ -155,9 +155,9 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
-                         <configuration>
-                             <skip>true</skip>
-                         </configuration>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -170,7 +170,7 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.1</version>
                 <configuration>
-                            <skip>true</skip>
+                    <skip>true</skip>
                     <excludes>
                         <exclude></exclude>
                     </excludes>
@@ -280,6 +280,12 @@
             <artifactId>testfx-junit5</artifactId>
             <version>4.0.15-alpha</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
